Fix legend spacing

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ legend {
   letter-spacing: 1px;
   padding: 0.5rem 1rem;
   color: #3e3c38;
-  margin-bottom: 1rem;
 }
 
 button {
